# -

./: .gitignore  CMakeLists.txt  README.md  global.cpp  main.cpp
controller/: controlleruser.cpp  controlleruser.h
entity/: admin.h  client.cpp  company.cpp
model/: adminmodel.cpp  adminmodel.h  clientmodel.cpp  clientmodel.h  companymodel.cpp  usermodel.cpp  usermodel.h
src/: CMakeLists.txt  global.cpp  main.cpp  介绍.md
src/controller/: controllerflight.cpp  controllerflight.h  controlleruser.cpp  controlleruser.h
src/entity/: admin.cpp  admin.h  client.h  company.cpp  company.h  flight.cpp  flight.h  plane.cpp  plane.h  user.cpp  user.h
src/model/: adminmodel.cpp  adminmodel.h  clientmodel.cpp  companymodel.cpp  companymodel.h  flightfilterproxymodel.cpp  flightfilterproxymodel.h  flightmodel.cpp  flightmodel.h  planemodel.cpp  planemodel.h
src/view/: flightwidget.cpp  flightwidget.h  flightwidget.ui  logindialog.cpp  logindialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerdialog.cpp
tickets/: CMakeLists.txt  admin.cpp  admin.h  client.cpp  client.h  company.cpp  company.h  global.cpp  global.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  user.cpp  user.h
utils/: README.md  directorymanager.cpp  directorymanager.h
view/: logindialog.h  mainwindow.cpp  mainwindow.h  registerdialog.h
航班管理/: QtWidgetsApplication1.sln
航班管理/QtWidgetsApplication1/: Flight.h  QtWidgetsApplication1.cpp  QtWidgetsApplication1.h  QtWidgetsApplication1.ui  QtWidgetsApplication1.vcxproj  QtWidgetsApplication1.vcxproj.filters  admin.h  company.h  flightorders.h  food.h  luggage.h  main.cpp  manageRecord.h  plane.h  user.h
航班管理/QtWidgetsApplication1/x64/Debug/: QtWidgetsApplication1.exe.recipe  QtWidgetsApplication1.ilk  qt.natvis  vc143.idb
航班管理/QtWidgetsApplication1/x64/Debug/QtWidget.7AD7A52F.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  QtWidgetsApplication1.lastbuildstate  QtWidgetsApplication1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
航班管理/QtWidgetsApplication1/x64/Debug/qt/: qtvars.xml
航班管理/QtWidgetsApplication1/x64/Debug/qt/moc/: moc_QtWidgetsApplication1.cpp
航班管理/QtWidgetsApplication1/x64/Debug/qt/qmake/: props.txt  qtvars.pro  qtvars.vcxproj
航班管理/QtWidgetsApplication1/x64/Debug/qt/rcc/: qrc_QtWidgetsApplication1.cpp
航班管理/QtWidgetsApplication1/x64/Debug/qt/uic/: ui_QtWidgetsApplication1.h
